Exists? is not a method, should be exists?

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@
 .chef/checksums/
 Attic
 roles/private_settings.rb
+
+# keep CoRD.app's *.rdp files out of the repo, they may contain passwds
 *.rdp
