add .DS_Store to gitignore list

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .chef/checksums/
 Attic
 roles/private_settings.rb
+.DS_Store
 
 # keep CoRD.app's *.rdp files out of the repo, they may contain passwds
 *.rdp
